--- a/index.html
+++ b/index.html
@@ -27,15 +27,23 @@
 </head>
 <body>
   <h1>Ojay's Currency Rate Checker</h1>
-  <label for="currency1">From:</label>
-  <select id="currency1"></select>
-  
-  <label for="currency2">To:</label>
-  <select id="currency2"></select>
-  
-  <button onclick="fetchRate()">Get Rate</button>
-  <div id="result"></div>
-  
-  <script src="app.js"></script>
+
+<label for="currency1">From:</label>
+<select id="currency1"></select>
+
+<label for="currency2">To:</label>
+<select id="currency2"></select>
+
+<button onclick="fetchRate()">Get Rate</button>
+<div id="result"></div>
+
+<hr>
+
+<h2>Latest Forex News</h2>
+<div id="news-container">
+  <div id="news-items"></div>
+</div>
+
+<script src="app.js"></script>
 </body>
 </html>
