--- a/exchange.html
+++ b/exchange.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="APIContainer2">
-            <h3>Check your favorite currency rate today</h3>
+            <h3>Check your favorite currency's exchange rate here today!</h3>
             <div class="currencyContainer">
                 <div style="margin-top: 16px">
                     <p>From: </p>
