--- a/exchange.html
+++ b/exchange.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,13 +15,14 @@
     </header>
 
     <main>
+        <!-- Dropdown-based Conversion -->
         <div class="APIContainer">
             <h3>Check your favorite currency rate today</h3>
             <div class="currencyContainer">
                 <div class="container">
                     <div style="margin-top: 16px">
-                        <p>From: </p>
-                        <p>To: </p>
+                        <p>From:</p>
+                        <p>To:</p>
                     </div>
                     <div style="margin-left: 10px">
                         <select class="form-control marginTopBottom" id="inputCurrencyFrom"></select>
@@ -35,12 +36,14 @@
                 </div>
             </div>
         </div>
+
+        <!-- Input-based Conversion -->
         <div class="APIContainer2">
             <h3>Check your favorite currency's exchange rate here today!</h3>
             <div class="currencyContainer">
                 <div style="margin-top: 16px">
-                    <p>From: </p>
-                    <p>To: </p>
+                    <p>From:</p>
+                    <p>To:</p>
                 </div>
                 <div style="margin-left: 10px">
                     <input class="form-control marginTopBottom" type="text" id="typeCurrencyFrom" value="EUR">
@@ -57,6 +60,7 @@
     <script src="exchange.js" type="module"></script>
 
     <script>
+        // Smooth scrolling function
         function scrollToContainer() {
             const container = document.querySelector('.APIContainer2');
             if (container) {
