--- a/exchange.html
+++ b/exchange.html
@@ -15,7 +15,6 @@
     </header>
 
     <main>
-        <!-- Dropdown-based Conversion -->
         <div class="APIContainer">
             <h3>Check your favorite currency rate today</h3>
             <div class="currencyContainer">
@@ -37,7 +36,6 @@
             </div>
         </div>
 
-        <!-- Input-based Conversion -->
         <div class="APIContainer2">
             <h3>Check your favorite currency's exchange rate here today!</h3>
             <div class="currencyContainer">
@@ -60,7 +58,7 @@
     <script src="exchange.js" type="module"></script>
 
     <script>
-        // Smooth scrolling function
+        //scrolling function
         function scrollToContainer() {
             const container = document.querySelector('.APIContainer2');
             if (container) {
